# care-circles

./: readme.md
server/: .env.example  .gitignore  README.md  demo_observability.py  pyproject.toml  run.py  test_evaluators.py  test_opik_integration.py
server/app/: __init__.py  main.py
server/app/agents/: __init__.py  crew_factory.py  output_handlers.py
server/app/agents/config/: agents.yaml  tasks.yaml
server/app/api/: __init__.py  dependencies.py
server/app/api/routes/: __init__.py  auth.py  care_circles.py  care_plans.py  care_requests.py  jobs.py  observability.py  shares.py  tasks.py  users.py
server/app/config/: __init__.py  constants.py  settings.py
server/app/db/: __init__.py  client.py
server/app/db/repositories/: __init__.py  base.py  care_circle_repository.py  care_plan_repository.py  care_request_repository.py  care_task_event_repository.py  care_task_repository.py  job_repository.py  user_repository.py
server/app/middleware/: __init__.py  auth.py  auth_placeholder.py  cors.py  error_handlers.py  permissions.py
server/app/models/: __init__.py  domain.py  responses.py
server/app/observability/: README.md  __init__.py  evaluators.py  instrumented_orchestrator.py  metrics.py  opik_client.py  opik_tracker.py
server/app/services/: __init__.py  agent_orchestrator.py  auth_service.py  care_circle_service.py  care_plan_service.py  job_runner.py  share_service.py  task_service.py
server/app/services/validators/: __init__.py  plan_limit_validator.py
server/app/sql/functions/: rls_policies.sql
server/app/sql/migrations/: 002_task_events.sql  (+3 more)
(+56 files in other folders)
