[project]
name = "care-circles-server"
version = "0.1.0"
description = "AI-assisted caregiving coordination system backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.1.0",
    "crewai>=0.28.0",
    "langchain-openai>=0.0.5",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "colorama>=0.4.6",
    "supabase>=2.3.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.25.0",
]

[tool.uv]
dev-dependencies = []
